# hermes-agent

./: AGENTS.md  CLAUDE.md
cpp/: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  README.md  vcpkg.json
cpp/acp/: CMakeLists.txt
cpp/acp/src/: acp_adapter.cpp  permissions.cpp
cpp/acp/tests/: CMakeLists.txt  test_acp_adapter.cpp  test_auth.cpp  test_permissions.cpp
cpp/agent/: CMakeLists.txt
cpp/agent/src/: ai_agent.cpp  at_references.cpp  aux_provider_alias.cpp  auxiliary_client.cpp  background_tasks.cpp  compression_feedback.cpp  context_compressor.cpp  context_compressor_depth.cpp  context_engine.cpp  context_references.cpp  context_truncate.cpp  copilot_acp_client.cpp  credential_pool.cpp  credential_pool_depth.cpp  display.cpp  error_classifier.cpp  honcho_provider.cpp  insights.cpp  insights_format.cpp  iteration_budget.cpp  memory_manager.cpp  memory_provider.cpp  models_dev.cpp  prompt_builder.cpp  prompt_builder_depth.cpp  prompt_caching.cpp  prompt_guidance.cpp  rate_limit_tracker.cpp  redact.cpp  retry_utils.cpp  session_state.cpp  skill_commands.cpp  skill_utils.cpp  smart_model_routing.cpp  subdirectory_hints.cpp  think_stripper.cpp  title_generator.cpp  tool_dispatch_wrapper.cpp  trajectory.cpp  usage_pricing.cpp
cpp/agent/tests/: CMakeLists.txt  test_ai_agent.cpp  test_at_references.cpp  test_aux_provider_alias.cpp  test_auxiliary_client.cpp  test_compression_feedback.cpp  test_context_compressor.cpp  test_context_compressor_depth.cpp  test_context_compressor_pipeline.cpp  test_context_engine.cpp  test_context_references.cpp  test_context_truncate.cpp  test_copilot_acp_client.cpp  test_credential_pool.cpp  test_credential_pool_depth.cpp  test_display.cpp  test_error_classifier.cpp  test_honcho_provider.cpp  test_insights.cpp  test_insights_format.cpp  test_iteration_budget.cpp  test_memory_manager.cpp  test_memory_manager_ext.cpp  test_memory_provider.cpp  test_models_dev.cpp  test_prompt_builder.cpp  test_prompt_builder_depth.cpp  test_prompt_caching.cpp  test_prompt_guidance.cpp  test_rate_limit_tracker.cpp  test_redact.cpp  test_retry_utils.cpp  test_session_state.cpp  test_skill_commands.cpp  test_skill_utils.cpp  test_smart_model_routing.cpp  test_subdirectory_hints.cpp  test_think_stripper.cpp  test_title_generator.cpp  test_tool_dispatch_wrapper.cpp  (+3 more)
cpp/approval/: CMakeLists.txt
cpp/approval/src/: command_scanner.cpp  danger_patterns.cpp  gateway_queue.cpp  mcp_credential_strip.cpp  osv_check.cpp  session_state.cpp  skills_guard.cpp  tirith_security.cpp  website_policy.cpp
cpp/approval/tests/: CMakeLists.txt  test_command_scanner.cpp  test_danger_patterns.cpp  test_gateway_queue.cpp  test_mcp_credential_strip.cpp  test_osv_check.cpp  test_session_state.cpp  test_skills_guard.cpp  test_tirith_security.cpp  test_website_policy.cpp
cpp/assets/: default_boot.md  default_soul.md
cpp/auth/: CMakeLists.txt
cpp/auth/src/: codex_oauth.cpp  copilot_oauth.cpp  credentials.cpp  env_loader.cpp  env_writer.cpp  gemini_oauth.cpp  mcp_oauth.cpp  nous_subscription.cpp  qwen_client.cpp  qwen_oauth.cpp
cpp/auth/tests/: CMakeLists.txt  test_codex_oauth.cpp  test_copilot_oauth.cpp  test_credentials.cpp  test_env_loader.cpp  test_env_writer.cpp  test_gemini_oauth.cpp  test_mcp_oauth.cpp  test_nous_subscription.cpp
cpp/batch/: CMakeLists.txt
cpp/batch/src/: batch_runner.cpp  hf_schema.cpp  swe_runner.cpp  trajectory_compressor.cpp
cpp/batch/tests/: CMakeLists.txt  test_batch_runner.cpp  test_hf_schema.cpp  test_swe_runner.cpp  test_trajectory_compressor.cpp
cpp/cli/: CMakeLists.txt
cpp/cli/src/: acp_cmd.cpp  auth_commands.cpp  auth_core.cpp  auth_helpers.cpp  banner.cpp  callbacks.cpp  claw_cmd.cpp  claw_migrate.cpp  clipboard.cpp  colors.cpp  commands.cpp  commands_depth.cpp  copilot_auth.cpp  cron_cmd.cpp  curses_ui.cpp  display.cpp  doctor.cpp  dump_cmd.cpp  ftxui_editor.cpp  gateway_cmd.cpp  gateway_helpers.cpp  hermes_cli.cpp  hook_discovery.cpp  image_attachment.cpp  logs_cmd.cpp  main.cpp  main_diagnostics.cpp  main_entry.cpp  main_help_gen.cpp  main_pipe_mode.cpp  main_preparse.cpp  main_repl_dispatch.cpp  main_session_browser.cpp  main_update_flow.cpp  mcp_config.cpp  memory_setup.cpp  model_normalize.cpp  model_switch_cmd.cpp  models_cmd.cpp  models_helpers.cpp  (+16 more)
cpp/cli/tests/: CMakeLists.txt  test_acp_cmd.cpp  test_auth_core.cpp  test_auth_helpers.cpp  test_callbacks.cpp  test_claw_cmd.cpp  test_claw_migrate.cpp  test_cli_commands.cpp  test_clipboard.cpp  test_colors.cpp  test_commands.cpp  test_commands_depth.cpp  test_copilot_auth.cpp  test_cron_cmd.cpp  test_curses_ui.cpp  test_display.cpp  test_doctor_full.cpp  test_dump_cmd.cpp  test_ftxui_editor.cpp  test_gateway_cmd.cpp  test_gateway_helpers.cpp  test_hermes_cli.cpp  test_hook_discovery.cpp  test_image_attachment.cpp  test_logs_cmd.cpp  test_longtail_commands.cpp  test_main_entry.cpp  test_main_entry_full.cpp  test_mcp_config.cpp  test_memory_reset.cpp  test_memory_setup.cpp  test_model_normalize.cpp  test_models_cmd.cpp  test_models_helpers.cpp  test_nous_subscription.cpp  test_plugins_helpers.cpp  test_profiles_helpers.cpp  test_providers_cmd.cpp  test_rl_commands.cpp  (+7 more)
cpp/config/: CMakeLists.txt
cpp/core/: CMakeLists.txt
cpp/cron/: CMakeLists.txt
cpp/docs/: architecture.md  module-dependency.md
cpp/environments/: CMakeLists.txt
cpp/gateway/: CMakeLists.txt
cpp/llm/: CMakeLists.txt
cpp/mcp_server/: CMakeLists.txt
cpp/packaging/: Dockerfile  com.nousresearch.hermes-gateway.plist  docker-buildx.sh  docker-compose.yml  docker-multiarch-smoke.sh  flake.nix  hermes-gateway.service  install.sh  termux-build.sh
cpp/plugins/: CMakeLists.txt
cpp/profile/: CMakeLists.txt
cpp/scripts/: build-release.sh  release.sh
cpp/skills/: CMakeLists.txt
cpp/state/: CMakeLists.txt
cpp/tests/: CMakeLists.txt  equivalence_test_framework.cpp  equivalence_test_framework.hpp  integration_tests.cpp  performance_benchmark.cpp  test_default_assets.cpp  test_equivalence.cpp
cpp/tools/: CMakeLists.txt
(+679 files in other folders)
